--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
 
+        <!--消息队列-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+
         <!--导入pagehelper相关依赖-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
