--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>spring-boot-starter-activemq</artifactId>
         </dependency>
 
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <!--导入pagehelper相关依赖-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
