--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,18 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
         <!--导入pagehelper相关依赖-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
