--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
             <version>2.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.2.5.Final</version>
+        </dependency>
+
+
         <!--导入pagehelper相关依赖-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
